# bigquery-dbt-lightdash

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_key.json  sample_profiles.yml  values.yaml
dbt/: dbt_project.yml
dbt/data/: raw_generated.csv
dbt/models/: customers.sql  events.yml  generated_a.yml  membership.yml  plan.sql  plan.yml  schema.yml  users.yml
dbt/models/staging/: schema.yml  stg_payments.sql
