[tool.poetry]
name = "lightdash-dbt-core"
version = "0.1.0"
description = ""
authors = ["Dave Shoup <dave.shoup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
dbt-core = ">=1.3.0,<1.6.0"
dbt-bigquery = "<1.8.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
